--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,11 +37,12 @@
 
 <body>
     <header>
+       
         <a href="/political-na-postsovet-space/">
-            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
-            Русское государство
-            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
-        </a>
+            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+            Союз Советских Социалистических Республик
+             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+           </a>
 
         <div>
             <a href="/political-na-postsovet-space/country/">Страны</a>
@@ -138,11 +139,11 @@
                 </div>
                 <div class="putin">
                     <img src="gerb-of-Russia-before-1993.png" alt="" class="pres">
-                    <figcaption>Герб России (до 1993)<hr>Coat of Arms of Russia (until 1993)</figcaption>
+                    <figcaption>Герб Российской Федераци (до 1993)<hr> Coat of Arms of the Russian Federation (until 1993)</figcaption>
                 </div>
                 <div class="putin">
                     <img src="emblem_red-bg.svg" alt="" class="pres">
-                    <figcaption>Герб <br>России (1993 - н. в.) <hr> Coat of Arms of Russia (1993-present)</figcaption>
+                    <figcaption>Герб Российской Федераци (1993 - н. в.) <hr>  Coat of Arms of the Russian Federation (1993-present)</figcaption>
                 </div>
             </div>
 
@@ -225,11 +226,11 @@
                 </div>
                 <div class="putin">
                     <img src="flag-of-Russia-before-1993.png" alt="" class="pres">
-                    <figcaption>Флаг России (до 1993) <hr>Flag of Russia (until 1993)</figcaption>
+                    <figcaption>Флаг Российской Федерации (до 1993) <hr> Flag of the Russian Federation (until 1993)</figcaption>
                 </div>
                 <div class="putin">
                     <img src="flag.svg" alt="" class="pres">
-                    <figcaption>Флаг России (1993 - н. в.) <hr> Flag of Russia (1993-present)</figcaption>
+                    <figcaption>Флаг Российской Федерации (1993 - н. в.) <hr> Flag of the Russian Federation (1993-present)</figcaption>
                 </div>
             </div>
             <br>
