--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -34,11 +34,12 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">
-            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
-            Российская империя
-             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
-           </a>
+       
+           <a href="/political-na-postsovet-space/">
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
+            Русское государство
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
+        </a>
      
         <div>
             <a href="/political-na-postsovet-space/country/" >Страны</a>
