--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -38,9 +38,9 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">
-            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
-            Союз Советских Социалистических Республик
-             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
+            Российская империя
+             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
            </a>
         <div>
             <a href="/political-na-postsovet-space/country/" >Страны</a>
