--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -38,8 +38,8 @@
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr">
             Российская Федерация
-             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr">
-           </a>
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr">
+        </a>
 
         <div>
             <a href="/political-na-postsovet-space/country/">Страны</a>
@@ -418,9 +418,15 @@
                 <div class="col-sm country gimn">
                     <hr>
 
-                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
-                                    class="fr" alt=""></a></b></p>
+                    <p><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png"
+                                class="fr" alt=""  title="Герб Русского государства"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/big-gerb-of-Russian-Empire.png"
+                                class="fr" alt="" title="Государственный герб Российской Империи"> <img
+                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""
+                                title="Государственный герб Союза Советских Социалистических Республик">
+                            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
+                                class="fr" alt=""  title="Герб Российской Федерации"></a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> Государственные
@@ -431,9 +437,15 @@
                     <p><a href="/political-na-postsovet-space/country/russia/president/"> Президент Российской
                             Федераци</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
-                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
-                                    class="fr" alt=""></a></b></p>
+                    <p><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                class="fr" alt="" title="Флаг Русского государства"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russian-Empire.png"
+                                class="fr" alt="" title="Гербовый флаг Российской Империи"> <img
+                                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""
+                                title="Государственный флаг Союза Советских Социалистических Республик "> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
+                                alt="" title="Флаг Российской Федерации"></a></p>
                 </div>
 
 
