--- a/country/kazakhstan/gos-simvolika/index.html
+++ b/country/kazakhstan/gos-simvolika/index.html
@@ -28,7 +28,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/kazakhstan/style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-kz.css">
     <link rel="stylesheet" href="gos-simvolika.css">
     <link rel="shortcut icon" href="gerb-of-Kazakhstan.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -39,9 +39,10 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/"><img src="gerb-of-KSSR.png" alt="" class="redr"> </a>
+        <a href="/political-na-postsovet-space/"><img src="gerb-of-KSSR.png" alt="" class="redr"> Казахстан <img
+                src="gerb-of-KSSR.png" alt="" class="redr"> </a>
 
-        
+
         <div>
             <a href="/political-na-postsovet-space/country/">Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
@@ -51,7 +52,7 @@
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
 
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/kazakhstan/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/">Государственная символика</a>
 
@@ -130,8 +131,8 @@
                 автор текста первого Государственного гимна Казахской ССР. Вдохновлённый величественными стихами гимна,
                 Мукан Тулебаев создал музыку. Гимн звучал в течение 50 лет.</p>
 
-                <h3>Музыка Гимна СССР</h3>
-<div class="gimn">
+            <h3>Музыка Гимна СССР</h3>
+            <div class="gimn">
                 <audio src="Kazakhstan_2006.ogg" controls></audio>
             </div>
             <br>
@@ -182,7 +183,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
-                    <p>    <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
@@ -191,21 +192,19 @@
                 </div>
                 <div class="col-sm country">
                     <p><a href="/political-na-postsovet-space/country/ussr/"><img
-                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""></a>
+                                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-KSSR.png" class="fr" alt=""></a>
                     </p>
-                    <p><b><a href="/political-na-postsovet-space/country/ussr/"> СССР</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/"> Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">
+                    <p><b><a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/kazakhstan/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/kazakhstan/">
                             Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
-                    </p>
+                    
                     <p><a href="/political-na-postsovet-space/country/ussr/"><img
-                                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""></a>
+                                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-KSSR.png" class="fr" alt=""></a>
                     </p>
 
                 </div>
-
 
 
             </div>
