--- a/country/kazakhstan/index.html
+++ b/country/kazakhstan/index.html
@@ -26,7 +26,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-kz.css">
     <link rel="shortcut icon" href="gos-simvolika/gerb-of-Kazakhstan.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -37,6 +37,8 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/"><img
+                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png" alt=""
+                class="redr"> Республика Казахстан <img
                 src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png" alt=""
                 class="redr"> </a>
 
@@ -50,7 +52,7 @@
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
 
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/kazakhstan/">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
         </div>
@@ -205,17 +207,16 @@
                 </div>
                 <div class="col-sm country">
                     <p><a href="/political-na-postsovet-space/country/ussr/"><img
-                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""></a>
+                                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png" class="fr" alt=""></a>
                     </p>
-                    <p><b><a href="/political-na-postsovet-space/country/ussr/"> СССР</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/"> Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">
+                    <p><b><a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/kazakhstan/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/kazakhstan/">
                             Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
-                    </p>
+                    
                     <p><a href="/political-na-postsovet-space/country/ussr/"><img
-                                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""></a>
+                                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png" class="fr" alt=""></a>
                     </p>
 
                 </div>
