--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -41,7 +41,7 @@
     <header>
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
-            Союз Советских Социалистических Республик
+            СССР
              <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
            </a>  
 
