--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -420,13 +420,16 @@
 
                     <p><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png"
-                                class="fr" alt=""  title="Герб Русского государства"> <img
+                                class="fr" alt="" title="Герб Русского государства"> <img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/big-gerb-of-Russian-Empire.png"
                                 class="fr" alt="" title="Государственный герб Российской Империи"> <img
                                 src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""
-                                title="Государственный герб Союза Советских Социалистических Республик">
+                                title="Государственный герб Союза Советских Социалистических Республик"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
+                                class="fr" alt=""
+                                title="Государственный герб Российской Советской Федеративной Социалистической Республики">
                             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
-                                class="fr" alt=""  title="Герб Российской Федерации"></a></p>
+                                class="fr" alt="" title="Герб Российской Федерации"></a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> Государственные
@@ -444,7 +447,10 @@
                                 class="fr" alt="" title="Гербовый флаг Российской Империи"> <img
                                 src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" class="fr" alt=""
                                 title="Государственный флаг Союза Советских Социалистических Республик "> <img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"
+                                class="fr" alt=""
+                                title="Государственный флаг Российской Советской Федеративной Социалистической Республики">
+                            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
                                 alt="" title="Флаг Российской Федерации"></a></p>
                 </div>
 
