--- a/country/index.html
+++ b/country/index.html
@@ -326,9 +326,9 @@
                         <tr>
                             <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> Союз Советских
                                         Социалистических Республик
-                                    </a></b><br><small>
-                                    (сейчас - <b><a href="/political-na-postsovet-space/country/russia/" class="sos">
-                                            Россия</a></b>)</small> </td>
+                                    </a></b>
+                                    <b><a href="/political-na-postsovet-space/country/russia/" class="sos"> &rarr;
+                                            Россия</a></b> </td>
                             <td>Москва</td>
                             <td colspan="2" style="text-align: center;"><a
                                     href="/political-na-postsovet-space/country/ussr/gos-simvolika/#герб"
