--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -37,7 +37,7 @@
 
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr">
-            Российская Федерация 
+            Российская Федерация
             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr">
         </a>
 
@@ -422,9 +422,11 @@
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png"
                                 class="fr" alt="" title="Герб Русского государства"> <img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/big-gerb-of-Russian-Empire.png"
-                                class="fr" alt="" title="Государственный герб Российской Империи"> <img
+                                class="fr" alt="" title="Государственный герб Российской Империи"></a><a class="frd"
+                            href="/political-na-postsovet-space/country/ussr/"> <img
                                 src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""
-                                title="Государственный герб Союза Советских Социалистических Республик"> <img
+                                title="Государственный герб Союза Советских Социалистических Республик"></a> <a
+                            class="frd" href="/political-na-postsovet-space/country/russia/"><img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
                                 class="fr" alt=""
                                 title="Государственный герб Российской Советской Федеративной Социалистической Республики">
