--- a/country/index.html
+++ b/country/index.html
@@ -50,12 +50,22 @@
     </header>
     <main>
         <div class="container">
+          
             <h1>Государства и географические регионы</h1>
             <hr>
             <p>
                 Постсоветские государства обычно делят на следующие пять групп. Принцип, по которому государство относят
                 к той или иной группе, основывается на географических и культурных факторах, а также на истории
                 взаимоотношений с Россией.
+                <div class="photol">
+                    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+        
+                    <!-- VK Widget -->
+                    <div id="vk_groups"></div>
+                    <script type="text/javascript">
+                    VK.Widgets.Group("vk_groups", {mode: 3}, 198438193);
+                    </script>
+                    </div>
             <ul>
                 <li>Россия (в свою очередь состоит из нескольких географических регионов: Восточная Европа, Прибалтика,
                     Северная Азия и Центральная Азия);</li>
