--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -42,10 +42,10 @@
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
             СССР
-             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
-           </a>  
+            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+        </a>
 
- 
+
         <div>
             <a href="/political-na-postsovet-space/country/">Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
@@ -243,6 +243,19 @@
 
                 <audio src="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3" controls></audio>
             </div>
+            <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 5, attach: "*" });
+            </script>
             <br>
 
 
