--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -39,20 +39,20 @@
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
             Союз Советских Социалистических Республик
-             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
-           </a>  
-     
+            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+        </a>
+
         <div>
-            <a href="/political-na-postsovet-space/country/" >Страны</a>
-            <a href="/political-na-postsovet-space/country/ussr/" >СССР</a>
+            <a href="/political-na-postsovet-space/country/">Страны</a>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">КазССР</a>
             <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
             <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
-          
+
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/ussr/" >Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ussr/">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
             <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
         </div>
@@ -368,6 +368,19 @@
             </p>
 
             <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 5, attach: "*" });
+            </script>
+            <br>
 
         </div>
 
@@ -414,7 +427,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
-                    <p>    <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
