--- a/reestr/index.html
+++ b/reestr/index.html
@@ -87,16 +87,16 @@
                             <td>Разрешен</td>
                             <td>&#8734;</td>
                         </tr>
-                        <tr class="razresheno">
+                        <tr class="ogranicheno">
                             <td>5</td>
-                            <td>Орлова Ваелрия</td>
-                            <td>Разрешен</td>
+                            <td>Орлова Валерия</td>
+                            <td>Приостановлено <br> (до 09.04.2021)</td>
                             <td >&#8734;</td>
                         </tr>
-                        <tr class="razresheno">
+                        <tr class="ogranicheno">
                             <td>6</td>
                             <td>Трощенко Юлия</td>
-                            <td>Разрешен</td>
+                            <td>Приостановлено <br> (до 09.04.2021)</td>
                             <td>&#8734;</td>
                         </tr>
                         <tr class="razresheno">
