--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <!--<link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">-->
 
     <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -52,34 +52,30 @@
             <br>
             <br>
             <br>
-            <div class="center">
+            <div class="infoburo">
                 <h1>Обратная связь</h1>
                 <hr>
                 <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
                     src="https://forms.yandex.ru/u/5fd26c8d8f438c63094b601d/?iframe=1" frameborder="0"
                     name="ya-form-5fd26c8d8f438c63094b601d" width="100%">
                 </iframe>
-                <h3>контакты</h3>
-                <p>Почта: <a href="mailto:zaharpeprenko2007@yandex.ru">zaharpeprenko2007@yandex.ru</a></p>
-                <p><a target="_blank" href="https://vk.me/club198438193">Написать в Вконтакте</a></p>
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
 
-            <div class="center">
-                <h2>Мы в соц сетях</h2>
+
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h2>Поддержать</h2>
                 <hr>
-                <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
-                <a target="_blank" href="https://t.me/AGENT_KGB_228"><img src="telegram.ico"></a>
 
+
+                <br>
+                <iframe <iframe
+                    src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100116439287320"
+                    width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+                    <br><br>
             </div>
-            <br>
-            <iframe <iframe
-                src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100116439287320"
-                width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
             <br>
             <br>
             <br><br><br><br><br><br><br><br><br><br>
@@ -98,6 +94,9 @@
             <div class="row">
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
+                    <br>
+                    <a target="_blank" href="https://vk.com/club198438193" title="ВКонтакте"><img
+                            src="VK_Compact_Logo.svg" alt="ВКонтакте" class="logo"></a>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
