--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -93,12 +93,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <br>
                     <a target="_blank" href="https://vk.com/club198438193" title="ВКонтакте"><img
                             src="VK_Compact_Logo.svg" alt="ВКонтакте" class="logo"></a>
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -108,14 +110,18 @@
                 </div>
 
                 <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
             </div>
+            <hr>
         </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
