--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -21,11 +21,18 @@
         <div><img src="https://mc.yandex.ru/watch/73002322" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+    <!-- VK Widget -->
+    <div id="vk_community_messages"></div>
+    <script type="text/javascript">
+        VK.Widgets.CommunityMessages("vk_community_messages", 198438193, { expanded: "1", widgetPosition: "left", tooltipButtonText: "Есть вопрос?" });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <!--<link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">-->
+
 
     <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -74,18 +81,12 @@
                 <iframe <iframe
                     src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100116439287320"
                     width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
-                    <br><br>
+                <br><br>
             </div>
             <br>
             <br>
             <br><br><br><br><br><br><br><br><br><br>
-            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-            <!-- VK Widget -->
-            <div id="vk_community_messages"></div>
-            <script type="text/javascript">
-                VK.Widgets.CommunityMessages("vk_community_messages", 198438193, { expanded: "1", tooltipButtonText: "Есть вопрос?" });
-            </script>
 
         </div>
     </main>
