--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -22,12 +22,6 @@
     </noscript>
     <!-- /Yandex.Metrika counter -->
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-    <!-- VK Widget -->
-    <div id="vk_community_messages"></div>
-    <script type="text/javascript">
-        VK.Widgets.CommunityMessages("vk_community_messages", 198438193, { expanded: "1", widgetPosition: "left", tooltipButtonText: "Есть вопрос?" });
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -43,16 +37,14 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-
+        <a href="/political-na-postsovet-space/">Post Soviet space</a>
         <div>
-            <a href="/political-na-postsovet-space/for-users/contacts/" id="id">Поддержка</a>
+            <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
+            <a href="/political-na-postsovet-space/for-users/contacts/" >Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
             <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
             <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
         </div>
-
     </header>
     <main>
         <div class="container">
