--- a/reestr/index.html
+++ b/reestr/index.html
@@ -52,7 +52,7 @@
             <h2>Спец. Реестр<sup></h2>
             <div class="wer">
                 <table border="1" rules="all" class=" text-info table-bordered" width="100%">
-                    <thead class="ussr">
+                    <thead class="ussr2">
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Фамилия Имя</th>
@@ -141,14 +141,18 @@
                         <tr class="razresheno">
                             <td>12</td>
                             <td>Сазонова Дарья</td>
-                            <td>Есть</td>
-                            <td>Активна</td>
-                            <td>0101202178618-ОМГ</td>
-                            <td>01.01.2021</td>
-                            <td>01.01.2022</td>
+                            <td rowspan="2">Есть</td>
+                            <td rowspan="2">Активна</td>
+                            <td rowspan="2">0101202123697-ДМГ</td>
+                            <td rowspan="2">01.01.2021</td>
+                            <td rowspan="2">01.01.2022</td>
+                        </tr>
+                        <tr class="razresheno">
+                            <td>13</td>
+                            <td>Редечкина Екатерина</td>
                         </tr>
                         <tr class="ogranicheno">
-                            <td>13</td>
+                            <td>14</td>
                             <td>Терновой Захар</td>
                             <td>Есть</td>
                             <td>Недействительна</td>
@@ -157,7 +161,7 @@
                             <td>01.04.2021</td>
                         </tr>
                         <tr class="razresheno">
-                            <td>14</td>
+                            <td>15</td>
                             <td>Авдеев Илья</td>
                             <td rowspan="3">Есть</td>
                             <td rowspan="3">Активна</td>
@@ -166,11 +170,11 @@
                             <td rowspan="3">01.07.2027</td>
                         </tr>
                         <tr class="razresheno">
-                            <td>15</td>
+                            <td>16</td>
                             <td>Арбузов Станислав</td>
                         </tr>
                         <tr class="razresheno">
-                            <td>16</td>
+                            <td>17</td>
                             <td>Холодов Артём</td>
                         </tr>
                   
