--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -40,7 +40,7 @@
         <a href="/political-na-postsovet-space/">Post Soviet space</a>
         <div>
             <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
-            <a href="/political-na-postsovet-space/for-users/contacts/" >Поддержка</a>
+            <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
             <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
             <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
             <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
@@ -69,9 +69,8 @@
                 <hr>
 
 
-                <br>
-                <iframe <iframe
-                    src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100116439287320"
+                <iframe
+                    src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=https%3A%2F%2Fruzaharsu.github.io%2Fpolitical-na-postsovet-space%2Ffor-users%2Fcontacts%2F&quickpay=shop&account=4100116439287320"
                     width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
                 <br><br>
             </div>
