--- a/reestr/licenses/index.html
+++ b/reestr/licenses/index.html
@@ -118,8 +118,12 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Тип Лицензии</td>
+                            <td>Категоря Лицензии</td>
                             <td>ТМП</td>
+                        </tr>
+                        <tr>
+                            <td>Тип Лицензии</td>
+                            <td>Бесплатная ограниченная</td>
                         </tr>
                         <tr>
                             <td>Серия</td>
@@ -165,8 +169,12 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>Категоря Лицензии</td>
+                            <td>ДМГ+</td>
+                        </tr>
+                        <tr>
                             <td>Тип Лицензии</td>
-                            <td>ДМГ</td>
+                            <td>Бесплатная премиальная </td>
                         </tr>
                         <tr>
                             <td>Серия</td>
@@ -192,6 +200,7 @@
                             <td>Кому выдана</td>
                             <td>Орлова Валерия, <br> Трощенко Юлия</td>
                         </tr>
+                      
                         <tr>
                             <td>Ограничения</td>
                             <td>Отсутствуют</td>
@@ -211,10 +220,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Тип Лицензии</td>
-                        <td>ДМГ+</td>
-                    </tr>
+                        <tr>
+                            <td>Категоря Лицензии</td>
+                            <td>ДМГ+</td>
+                        </tr>
+                        <tr>
+                            <td>Тип Лицензии</td>
+                            <td>Бесплатная премиальная </td>
+                        </tr>
                     <tr>
                         <td>Серия</td>
                         <td>01092020</td>
@@ -258,10 +271,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Тип Лицензии</td>
-                        <td>ОМГ</td>
-                    </tr>
+                        <tr>
+                            <td>Категоря Лицензии</td>
+                            <td>ОМГ</td>
+                        </tr>
+                        <tr>
+                            <td>Тип Лицензии</td>
+                            <td>Бесплатная классическая</td>
+                        </tr>
                     <tr>
                         <td>Серия</td>
                         <td>01092020</td>
@@ -305,10 +322,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Тип Лицензии</td>
-                        <td>ДМГ</td>
-                    </tr>
+                        <tr>
+                            <td>Категоря Лицензии</td>
+                            <td>ДМГ</td>
+                        </tr>
+                        <tr>
+                            <td>Тип Лицензии</td>
+                            <td>Бесплатная классическая</td>
+                        </tr>
                     <tr>
                         <td>Серия</td>
                         <td>01092020</td>
@@ -352,10 +373,14 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Тип Лицензии</td>
-                        <td>ЧМГ</td>
-                    </tr>
+                        <tr>
+                            <td>Категоря Лицензии</td>
+                            <td>ЧМГ+</td>
+                        </tr>
+                        <tr>
+                            <td>Тип Лицензии</td>
+                            <td>Бесплатная премиальная </td>
+                        </tr>
                     <tr>
                         <td>Серия</td>
                         <td>01092020</td>
