--- a/reestr/index.html
+++ b/reestr/index.html
@@ -65,6 +65,7 @@
                             <th scope="col">Наличие Лицензии</th>
                             <th scope="col">Статус Лицензии</th>
                             <th scope="col">№ Лицензии</th>
+                            <th scope="col">Тип Лицензии</th>
                             <th scope="col">Дата выдачи</th>
                             <th scope="col">Лицензия до</th>
                         </tr>
@@ -76,6 +77,7 @@
                             <td rowspan="3">Есть</td>
                             <td rowspan="3">Активна</td>
                             <td rowspan="3">010220213256-ТМП</td>
+                            <td rowspan="3">free limited</td>
                             <td rowspan="3">01.01.2021</td>
                             <td rowspan="3">01.07.2021</td>
                         </tr>
@@ -100,7 +102,7 @@
                                 010920207859-ДМГ</a><br><a
                                 href="/political-na-postsovet-space/reestr/licenses/#010920207863-ЧМГ" title="Лицензия зарезервирована">
                                 010920207863-ЧМГ</a></td>
-                        
+                        <td rowspan="4">free premium</td>
                             <td rowspan="2">01.09.2020</td>
                             <td rowspan="2">01.09.2021</td>
                         </tr>
@@ -134,6 +136,7 @@
                             <td>Есть</td>
                             <td>Активна</td>
                             <td><a href="/political-na-postsovet-space/reestr/licenses/#010920207861-ОМГ">010920207861-ОМГ</a></td>
+                            <td>free classic</td>
                             <td>01.01.2021</td>
                             <td>01.01.2022</td>
                         </tr>
@@ -143,6 +146,7 @@
                             <td rowspan="3">Есть</td>
                             <td rowspan="3">Активна</td>
                             <td rowspan="3">010220213257-ТМП</td>
+                            <td rowspan="3">free limited</td>
                             <td rowspan="3">01.01.2021</td>
                             <td rowspan="3">01.07.2021</td>
 
@@ -163,6 +167,7 @@
                             <td rowspan="2">Есть</td>
                             <td rowspan="2">Активна</td>
                             <td rowspan="2"><a href="/political-na-postsovet-space/reestr/licenses/#010920207862-ДМГ">010920207862-ДМГ</a></td>
+                            <td rowspan="2">free classic</td>
                             <td rowspan="2">01.01.2021</td>
                             <td rowspan="2">01.01.2022</td>
                         </tr>
@@ -176,6 +181,7 @@
                             <td>Есть</td>
                             <td>Недействительна</td>
                             <td>010220213258-ООК</td>
+                            <td>limited</td>
                             <td>01.01.2021</td>
                             <td>01.04.2021</td>
                         </tr>
@@ -185,6 +191,7 @@
                             <td rowspan="3">Есть</td>
                             <td rowspan="3">Активна</td>
                             <td rowspan="3">010220213259-ТМП</td>
+                            <td rowspan="3">free limited</td>
                             <td rowspan="3">01.01.2021</td>
                             <td rowspan="3">01.07.2027</td>
                         </tr>
