--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -59,11 +59,21 @@
         </div>
     </header>
     <main>
-        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
-            frameborder="0"></iframe>
+
         <div class="container">
 
-            <h1 id="russia">Россия</h1>
+            <h1 id="russia">
+                Россия
+                <br>
+                <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" class="redr"
+                    alt="" title="Русское государство">
+                <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" class="redr"
+                    alt="" title="Российская Империя">
+                <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="redr" alt=""
+                    title="Союз Советских Социалистических Республик">
+                <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt=""
+                    class="redr" title="Российская Федерация">
+            </h1>
             <hr>
             <p>
                 Россия, другое официальное название — Российская Федерация (РФ), — государство в Восточной
@@ -237,7 +247,12 @@
                     обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
                     заключений Верховного и Конституционного судов.
                 </p>
-
+            </div>
+        </div>
+        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
+            frameborder="0"></iframe>
+        <div class="container">
+            <div class="flags">
 
                 <h2>Россия и США</h2>
                 <hr>
