--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -35,11 +35,13 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Пострадянський простір <img
+        <a href="/political-na-postsovet-space/"><img
+                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="dre"> Україна <img
                 src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="dre"> </a>
 
-        <a href="/political-na-postsovet-space/country/">Країни</a>
+
         <div>
+            <a href="/political-na-postsovet-space/country/">Країни</a>
             <a href="/political-na-postsovet-space/country/ussr/">СРСР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Білорусь</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
@@ -116,6 +118,19 @@
                     </audio>
                 </div>
             </div>
+            <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 10, attach: "*" });
+            </script>
         </div>
         <br>
     </main>
