--- a/country/index.html
+++ b/country/index.html
@@ -327,13 +327,7 @@
                                 <p>
                                     В Уставе ООН до сих пор именуется Союзом Советских Социалистических Республик.
                                 </p>
-                                <p>
-                                    Российская Федерация является правопреемником Союза ССР своей территории, а также
-                                    правопреемником (правопродолжателем) Союза ССР в отношении членства в международных
-                                    организациях, их органах, участия в международных договорах, а также в отношении
-                                    предусмотренных международными договорами обязательств и активов Союза ССР за
-                                    пределами территории Российской Федерации.
-                                </p>
+
                                 <p>Российская Федерация - член <img
                                         src="/political-na-postsovet-space/country/cis/flag-of-the-CIS.png" alt=""
                                         class="flagi"> <b>СНГ</b>, член <b>СГРБ</b>,член <b>ЕАЭС</b>.</p>
@@ -347,8 +341,8 @@
                             <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> Союз Советских
                                         Социалистических Республик
                                     </a></b>
-                                <b><a href="/political-na-postsovet-space/country/russia/" class="sos"> &rarr;
-                                        Россия</a></b>
+                                <b><a href="/political-na-postsovet-space/country/russia/" class="sos"> &rarr; <abbr title="Статья 67.1 ч.1 Конституции РФ. см. примечания">
+                                        Россия</a></abbr><sup> <a href="#primechania2" class="sos">2</a></sup></b>
                             </td>
                             <td>Москва</td>
                             <td colspan="2" style="text-align: center;"><a
@@ -440,7 +434,7 @@
                         </tr>
                         <tr>
 
-                            <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
+                            <td><a href="dni">ДНР</a><sup><a href="#primechania3" class="sos">3</a></sup></td>
 
                             <td>Донецк</td>
                             <td><img src="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png"
@@ -468,7 +462,7 @@
 
                         </tr>
                         <tr>
-                            <td><a href="lnr">ЛНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
+                            <td><a href="lnr">ЛНР</a><sup><a href="#primechania3" class="sos">3</a></sup></td>
 
                             <td>Луганск</td>
                             <td><img src="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png"
@@ -553,7 +547,19 @@
                         <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и
                             ЛНР). Постепенно будут добавляться другие страны Постсоветского пространства.
                         </li>
-                        <li>Независимость ДНР и ЛНР не признают члены ООН</li>
+                        <li id="primechania2">
+
+                            <i>
+                                "Российская Федерация является правопреемником Союза ССР своей территории, а также
+                                правопреемником (правопродолжателем) Союза ССР в отношении членства в международных
+                                организациях, их органах, участия в международных договорах, а также в отношении
+                                предусмотренных международными договорами обязательств и активов Союза ССР за
+                                пределами территории Российской Федерации" </i>- <abbr
+                                title="Конституция Российской Федерации принята всенародным голосованием 12 декабря 1993 года с изменениями, одобренными в ходе общероссийского голосования 1 июля 2020 года">
+                                Статья 67.1 ч.1 Конституции РФ.</abbr>
+
+                        </li>
+                        <li id="primechania3">Независимость ДНР и ЛНР не признают члены ООН</li>
                     </ol>
                 </small>
 
