--- a/for-users/legal/confidential/index.html
+++ b/for-users/legal/confidential/index.html
@@ -103,7 +103,7 @@
 
                   
                         <li> 
-                            А также на сайте подключен сервис Яндекс.Метрика. Через него мы также собираем про
+                            Также на сайте подключен сервис Яндекс.Метрика. Через него мы также собираем про
                             вас следующие категории Персональной информации:
                             <ol>
                                 <li>Версию ОС;</li>
@@ -115,21 +115,14 @@
                     </ol>
                     
                     <br>
-                    Также Мы используем файлы cookie и веб-маяки (включая пиксельные теги) для сбора
+                    А также мы используем файлы cookie и веб-маяки (включая пиксельные теги) для сбора
                     Персональной информации и связывания такой личной информации с Вашим устройством и
                     веб-браузером
-                    <br>
-
-
-                    <br>
-                    Мы не собираем целенаправленно чувствительную персональную информацию (такую как расовое
-                    происхождение, политические взгляды, информация о здоровье и биометрические данные). Тем
-                    не менее Вы можете самостоятельно предоставить их Нам.
                     <br>
                     <br>
                     Мы не собираем данные с целью составления «портрета» пользователя в той степени, при
                     которой это может существенно повлиять на Ваши права и свободы в соответствии с применимым
-                    законодательством.
+                    законодательством РФ. 
 
                 </li>
                 <br><br><br>
